# JP

./: README.md  config.yaml  makefile
docs/: _config.yml  index.md  vista-desarrollo.md  vista-despliegue.md  vista-funcional.md  vista-informacion.md
docs/_site/: index.html  vista-desarrollo.html  vista-despliegue.html  vista-funcional.html  vista-informacion.html
docs/_site/diagrams/: components.puml  networks.puml
docs/diagrams/: deployment.puml  entities.puml
k8s/: README.md  offers-app-deployment.yaml  offers-app-service.yaml  offers-db-deployment.yaml  offers-db-service.yaml  offers-network-policy.yaml  posts-app-deployment.yaml  posts-app-service.yaml  posts-db-deployment.yaml  posts-db-service.yaml  posts-network-policy.yaml  routes-app-deployment.yaml  routes-app-service.yaml  routes-db-deployment.yaml  routes-db-service.yaml  routes-netpol.yaml  users-app-deployment.yaml  users-app-service.yaml  users-db-deployment.yaml  users-db-service.yaml  users-network-policy.yaml
offers_app/: Dockerfile  Makefile  README.md  pyproject.toml
offers_app/app/: database.py  main.py  models.py  schemas.py
offers_app/app/routers/: offers_router.py
offers_app/app/services/: offers_service.py
offers_app/tests/: conftest.py  test_health.py  test_router.py
posts_app/: Dockerfile  Makefile  README.md  pyproject.toml
posts_app/app/: config.py  database.py  integrations.py  main.py  models.py  schemas.py
posts_app/app/repositories/: posts_repository.py
posts_app/app/routers/: posts.py
posts_app/app/services/: posts_service.py
posts_app/tests/: conftest.py  test_posts.py
routes_app/: Dockerfile  Makefile  README.md  pyproject.toml  wait-for-it.sh
routes_app/app/: config.py  database.py  main.py  models.py  schemas.py
routes_app/app/repositories/: routes_repository.py
routes_app/app/routers/: routes.py
routes_app/app/services/: routes_service.py
routes_app/tests/: conftest.py  test_routes.py
users_app/: Dockerfile  README.md  pyproject.toml
users_app/app/: auth.py  database.py  main.py  models.py  schemas.py  utils.py
users_app/app/repositories/: user_repository.py
users_app/app/routers/: user_router.py
users_app/app/services/: user_service.py
users_app/tests/: conftest.py  test_auth.py  test_users.py
