[project]
name = "users-app"
version = "0.1.0"
description = ""
authors = [
    {name = "mhgualdron",email = "mhernandezgualdron@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.27.1,<0.28.0)",
    "sqlalchemy (>=2.0.23,<2.1.0)",
    "psycopg2-binary (>=2.9.9,<2.10.0)",
    "bcrypt (>=4.1.2,<4.2.0)",
    "pydantic (>=2.6.1,<2.7.0)",
    "pydantic-settings (>=2.1.0,<2.2.0)",
    "python-dotenv (>=1.0.1,<1.1.0)",
    "email-validator (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.0,<8.5.0"
pytest-cov = ">=6.1.1,<6.2.0"
pytest-mock = ">=3.14.1,<3.15.0"
pytest-env = ">=1.1.5,<1.2.0"
httpx = ">=0.25.2,<0.26.0"
faker = ">=37.3.0,<37.4.0"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "app"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"
env = [
  "LOG_LEVEL = INFO",
  "DB_HOST = localhost",
  "DB_PORT = 5432",
  "DB_NAME = users_db_test",
  "DB_USER = postgres",
  "DB_PASSWORD = postgres"
]
